--- a/Languages/Japanese/DefInjected/ThingCategoryDef/ThingCategories.xml
+++ b/Languages/Japanese/DefInjected/ThingCategoryDef/ThingCategories.xml
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
+  <BuildingsNuclear.label>原子力</BuildingsNuclear.label>
   <Nuclear.label>原子力</Nuclear.label>
   <NuclearWaste.label>核廃棄物</NuclearWaste.label>
   <NuclearFuel.label>核燃料</NuclearFuel.label>
@@ -8,6 +9,5 @@
   <SabotRounds.label>サボット弾</SabotRounds.label>
   <Hazmat.label>防護服</Hazmat.label>
   <Mopp.label>戦闘用</Mopp.label>
-
 
 </LanguageData>
