--- a/Languages/Japanese/DefInjected/DamageDef/Damages_LocalInjury.xml
+++ b/Languages/Japanese/DefInjected/DamageDef/Damages_LocalInjury.xml
@@ -10,4 +10,13 @@
   <LaserDischarge.label>レーザー放射</CoreBlast.label>
   <LaserDischarge.deathMessage>{0} は上手に焼かれました。</CoreBlast.deathMessage>
 
+  <Bomb_PlasmaToroid.label>プラズマ　トロイド</Bomb_PlasmaToroid.label>
+  <Bomb_PlasmaToroid.deathMessage>{0} は爆発で死にました。</Bomb_PlasmaToroid.deathMessage>
+
+  <Bomb_Sabot.label>サボット弾</Bomb_Sabot.label>
+  <Bomb_Sabot.deathMessage>{0} は爆発で死にました。</Bomb_Sabot.deathMessage>
+
+  <Bomb_DUSabot.label>サボット弾</Bomb_DUSabot.label>
+  <Bomb_DUSabot.deathMessage>{0} は爆発で死にました。</Bomb_DUSabot.deathMessage>
+
 </LanguageData>
