--- a/Languages/Japanese/DefInjected/Rimatomics.ResearchStepDef/Rimatomics_BWeapons.xml
+++ b/Languages/Japanese/DefInjected/Rimatomics.ResearchStepDef/Rimatomics_BWeapons.xml
@@ -1,148 +1,148 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <ICBM1.StepLabel>核兵器を研究する (知力 15)</ICBM1.StepLabel>
-  <ICBM1.StepDesc>核兵器を作るためには、まず研究員にそのデザインと仕組みを調べさせよう</ICBM1.StepDesc>
+  <ICBM1.label>核兵器を研究する (知力 15)</ICBM1.label>
+  <ICBM1.description>核兵器を作るためには、まず研究員にそのデザインと仕組みを調べさせよう</ICBM1.description>
 
-  <ICBM2.StepLabel>部品を評価する (工芸 16)</ICBM2.StepLabel>
-  <ICBM2.StepDesc>工芸家に、入手できる資源から核ミサイルに必要な部品を作るための設計をさせよう</ICBM2.StepDesc>
+  <ICBM2.label>部品を評価する (工芸 16)</ICBM2.label>
+  <ICBM2.description>工芸家に、入手できる資源から核ミサイルに必要な部品を作るための設計をさせよう</ICBM2.description>
 
-  <ICBM3.StepLabel>設計図を調べる (建築 16)</ICBM3.StepLabel>
-  <ICBM3.StepDesc>建築家に、入手できる道具で核ミサイルが作れる設計を固めさせよう</ICBM3.StepDesc>
+  <ICBM3.label>設計図を調べる (建築 16)</ICBM3.label>
+  <ICBM3.description>建築家に、入手できる道具で核ミサイルが作れる設計を固めさせよう</ICBM3.description>
 
-  <ICBM4.StepLabel>武器管制システムを作る</ICBM4.StepLabel>
-  <ICBM4.StepDesc>電力ネットワークを共有するエネルギー兵器を制御するのに使う、有人の情報処理システム。画面には目標とPPC電池の残量も確認できる</ICBM4.StepDesc>
+  <ICBM4.label>武器管制システムを作る</ICBM4.label>
+  <ICBM4.description>電力ネットワークを共有するエネルギー兵器を制御するのに使う、有人の情報処理システム。画面には目標とPPC電池の残量も確認できる</ICBM4.description>
 
-  <ICBM5.StepLabel>目標捕捉システムを作る</ICBM5.StepLabel>
-  <ICBM5.StepDesc>あらゆる陸と空の目標を追跡して兵器システムに情報を提供する装置。ミサイルのトラッキングと誘導にも欠かせない</ICBM5.StepDesc>
+  <ICBM5.label>目標捕捉システムを作る</ICBM5.label>
+  <ICBM5.description>あらゆる陸と空の目標を追跡して兵器システムに情報を提供する装置。ミサイルのトラッキングと誘導にも欠かせない</ICBM5.description>
 
-  <ICBM6.StepLabel>ミサイルサイロを建てる</ICBM6.StepLabel>
-  <ICBM6.StepDesc>ミサイルサイロができたら、武器管制システムと同じ電力ネットワークに繋げよう</ICBM6.StepDesc>
+  <ICBM6.label>ミサイルサイロを建てる</ICBM6.label>
+  <ICBM6.description>ミサイルサイロができたら、武器管制システムと同じ電力ネットワークに繋げよう</ICBM6.description>
 
-  <ICBM7.StepLabel>データを集める</ICBM7.StepLabel>
-  <ICBM7.StepDesc>任意の目標に向けてミサイルを発射しよう。データの量は発射と爆発の成功次第</ICBM7.StepDesc>
+  <ICBM7.label>データを集める</ICBM7.label>
+  <ICBM7.description>任意の目標に向けてミサイルを発射しよう。データの量は発射と爆発の成功次第</ICBM7.description>
 
-  <EnergyWeapons1.StepLabel>エネルギー兵器を研究する (知力 5)</EnergyWeapons1.StepLabel>
-  <EnergyWeapons1.StepDesc>研究員にリムアトミクス設計のエネルギー兵器のデザインと仕組みを調べさせよう</EnergyWeapons1.StepDesc>
+  <EnergyWeapons1.label>エネルギー兵器を研究する (知力 5)</EnergyWeapons1.label>
+  <EnergyWeapons1.description>研究員にリムアトミクス設計のエネルギー兵器のデザインと仕組みを調べさせよう</EnergyWeapons1.description>
 
-  <EnergyWeapons2.StepLabel>部品を評価する (工芸 5)</EnergyWeapons2.StepLabel>
-  <EnergyWeapons2.StepDesc>工芸家に、入手できる資源からエネルギー兵器に必要な部品を作るための設計をさせよう</EnergyWeapons2.StepDesc>
+  <EnergyWeapons2.label>部品を評価する (工芸 5)</EnergyWeapons2.label>
+  <EnergyWeapons2.description>工芸家に、入手できる資源からエネルギー兵器に必要な部品を作るための設計をさせよう</EnergyWeapons2.description>
 
-  <EnergyWeapons3.StepLabel>設計図を調べる (建築 5)</EnergyWeapons3.StepLabel>
-  <EnergyWeapons3.StepDesc>建築家に、入手できる道具でエネルギー兵器が作れる設計を固めさせよう</EnergyWeapons3.StepDesc>
+  <EnergyWeapons3.label>設計図を調べる (建築 5)</EnergyWeapons3.label>
+  <EnergyWeapons3.description>建築家に、入手できる道具でエネルギー兵器が作れる設計を固めさせよう</EnergyWeapons3.description>
 
-  <EnergyWeapons4.StepLabel>兵器研究台を作る</EnergyWeapons4.StepLabel>
-  <EnergyWeapons4.StepDesc>兵器研究台は拾い範囲のエネルギー兵器の技術をプロトタイプしたり試したりするための装置が揃っている。ほとんどのエネルギー兵器の研究の実験はこの装置が必要</EnergyWeapons4.StepDesc>
+  <EnergyWeapons4.label>兵器研究台を作る</EnergyWeapons4.label>
+  <EnergyWeapons4.description>兵器研究台は拾い範囲のエネルギー兵器の技術をプロトタイプしたり試したりするための装置が揃っている。ほとんどのエネルギー兵器の研究の実験はこの装置が必要</EnergyWeapons4.description>
 
-  <EnergyWeapons5.StepLabel>武器管制システムを作る</EnergyWeapons5.StepLabel>
-  <EnergyWeapons5.StepDesc>電力ネットワークを共有するエネルギー兵器を制御するのに使う、有人の情報処理システム。画面には目標とPPC電池の残量も確認できる</EnergyWeapons5.StepDesc>
+  <EnergyWeapons5.label>武器管制システムを作る</EnergyWeapons5.label>
+  <EnergyWeapons5.description>電力ネットワークを共有するエネルギー兵器を制御するのに使う、有人の情報処理システム。画面には目標とPPC電池の残量も確認できる</EnergyWeapons5.description>
 
-  <EnergyWeapons6.StepLabel>目標捕捉システムを作る</EnergyWeapons6.StepLabel>
-  <EnergyWeapons6.StepDesc>あらゆる陸と空の目標を追跡して兵器システムに情報を提供する装置。飛来するミサイルや砲弾もトラッキングする</EnergyWeapons6.StepDesc>
+  <EnergyWeapons6.label>目標捕捉システムを作る</EnergyWeapons6.label>
+  <EnergyWeapons6.description>あらゆる陸と空の目標を追跡して兵器システムに情報を提供する装置。飛来するミサイルや砲弾もトラッキングする</EnergyWeapons6.description>
 
-  <EnergyWeapons7.StepLabel>プロトタイプのPPC電池を作る</EnergyWeapons7.StepLabel>
-  <EnergyWeapons7.StepDesc>重要！武器管制システムと同じ電力ネットワークを共有するようにPPC電池を作り、《完全に充電してから、システムテストを行うために入植者を武器管制システムに送ろう》。PPC電池というスーパーコンデンサは一般の電池より充電効率がよく、エネルギー兵器に必要な巨大な電気パルスを提供できる。一般の電池と同じように余剰出力で充電できるが、一般の電池と違って屋外防水ケーシングで守られている。</EnergyWeapons7.StepDesc>
+  <EnergyWeapons7.label>プロトタイプのPPC電池を作る</EnergyWeapons7.label>
+  <EnergyWeapons7.description>重要！武器管制システムと同じ電力ネットワークを共有するようにPPC電池を作り、《完全に充電してから、システムテストを行うために入植者を武器管制システムに送ろう》。PPC電池というスーパーコンデンサは一般の電池より充電効率がよく、エネルギー兵器に必要な巨大な電気パルスを提供できる。一般の電池と同じように余剰出力で充電できるが、一般の電池と違って屋外防水ケーシングで守られている。</EnergyWeapons7.description>
 
 
   <!-- ADS -->
 
-  <ADS1.StepLabel>ADSを研究する (知力 5)</ADS1.StepLabel>
-  <ADS1.StepDesc>アクティブ・ディナイアル・システム (以後ADS)を作るためには、まず研究員にそのデザインと仕組みを調べさせよう</ADS1.StepDesc>
+  <ADS1.label>ADSを研究する (知力 5)</ADS1.label>
+  <ADS1.description>アクティブ・ディナイアル・システム (以後ADS)を作るためには、まず研究員にそのデザインと仕組みを調べさせよう</ADS1.description>
 
-  <ADS2.StepLabel>部品を評価する (工芸 5)</ADS2.StepLabel>
-  <ADS2.StepDesc>工芸家に、入手できる資源からADSに必要な部品を作るための設計をさせよう</ADS2.StepDesc>
+  <ADS2.label>部品を評価する (工芸 5)</ADS2.label>
+  <ADS2.description>工芸家に、入手できる資源からADSに必要な部品を作るための設計をさせよう</ADS2.description>
 
-  <ADS3.StepLabel>設計図を調べる (建築 5)</ADS3.StepLabel>
-  <ADS3.StepDesc>建築家に、入手できる道具でADSが作れる設計を固めさせよう</ADS3.StepDesc>
+  <ADS3.label>設計図を調べる (建築 5)</ADS3.label>
+  <ADS3.description>建築家に、入手できる道具でADSが作れる設計を固めさせよう</ADS3.description>
 
-  <ADS4.StepLabel>ADSのプロトタイプを作る</ADS4.StepLabel>
-  <ADS4.StepDesc>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</ADS4.StepDesc>
+  <ADS4.label>ADSのプロトタイプを作る</ADS4.label>
+  <ADS4.description>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</ADS4.description>
 
-  <ADS5.StepLabel>データを集める</ADS5.StepLabel>
-  <ADS5.StepDesc>データを集めるためにメカノイド以外の生物に向けて試射しよう</ADS5.StepDesc>
+  <ADS5.label>データを集める</ADS5.label>
+  <ADS5.description>データを集めるためにメカノイド以外の生物に向けて試射しよう</ADS5.description>
 
 
   <!-- Tesla Coil -->
 
-  <TeslaCoil1.StepLabel>テスラコイルを研究する (知力 6)</TeslaCoil1.StepLabel>
-  <TeslaCoil1.StepDesc>テスラコイルを作るためには、まず研究員にそのデザインと仕組みを調べさせよう</TeslaCoil1.StepDesc>
+  <TeslaCoil1.label>テスラコイルを研究する (知力 6)</TeslaCoil1.label>
+  <TeslaCoil1.description>テスラコイルを作るためには、まず研究員にそのデザインと仕組みを調べさせよう</TeslaCoil1.description>
 
-  <TeslaCoil2.StepLabel>部品を評価する (工芸 6)</TeslaCoil2.StepLabel>
-  <TeslaCoil2.StepDesc>工芸家に、入手できる資源からテスラコイルに必要な部品を作るための設計をさせよう</TeslaCoil2.StepDesc>
+  <TeslaCoil2.label>部品を評価する (工芸 6)</TeslaCoil2.label>
+  <TeslaCoil2.description>工芸家に、入手できる資源からテスラコイルに必要な部品を作るための設計をさせよう</TeslaCoil2.description>
 
-  <TeslaCoil3.StepLabel>設計図を調べる (建築 6)</TeslaCoil3.StepLabel>
-  <TeslaCoil3.StepDesc>建築家に、入手できる道具でテスラコイルが作れる設計を固めさせよう</TeslaCoil3.StepDesc>
+  <TeslaCoil3.label>設計図を調べる (建築 6)</TeslaCoil3.label>
+  <TeslaCoil3.description>建築家に、入手できる道具でテスラコイルが作れる設計を固めさせよう</TeslaCoil3.description>
 
-  <TeslaCoil4.StepLabel>テスラコイルのプロトタイプを作る</TeslaCoil4.StepLabel>
-  <TeslaCoil4.StepDesc>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</TeslaCoil4.StepDesc>
+  <TeslaCoil4.label>テスラコイルのプロトタイプを作る</TeslaCoil4.label>
+  <TeslaCoil4.description>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</TeslaCoil4.description>
 
-  <TeslaCoil5.StepLabel>データを集める</TeslaCoil5.StepLabel>
-  <TeslaCoil5.StepDesc>データを集めるために生物に向けて試射しよう</TeslaCoil5.StepDesc>
+  <TeslaCoil5.label>データを集める</TeslaCoil5.label>
+  <TeslaCoil5.description>データを集めるために生物に向けて試射しよう</TeslaCoil5.description>
 
 
   <!-- HEL -->
 
-  <HEL1.StepLabel>HELを研究する (知力 8)</HEL1.StepLabel>
-  <HEL1.StepDesc>ハイ・エネルギー・レーザー (以後HEL)を作るためには、まず研究員にそのデザインと仕組みを調べさせよう</HEL1.StepDesc>
+  <HEL1.label>HELを研究する (知力 8)</HEL1.label>
+  <HEL1.description>ハイ・エネルギー・レーザー (以後HEL)を作るためには、まず研究員にそのデザインと仕組みを調べさせよう</HEL1.description>
 
-  <HEL2.StepLabel>部品を評価する (工芸 12)</HEL2.StepLabel>
-  <HEL2.StepDesc>工芸家に、入手できる資源からHELに必要な部品を作るための設計をさせよう</HEL2.StepDesc>
+  <HEL2.label>部品を評価する (工芸 12)</HEL2.label>
+  <HEL2.description>工芸家に、入手できる資源からHELに必要な部品を作るための設計をさせよう</HEL2.description>
 
-  <HEL3.StepLabel>設計図を調べる (建築 12)</HEL3.StepLabel>
-  <HEL3.StepDesc>建築家に、入手できる道具でHELが作れる設計を固めさせよう</HEL3.StepDesc>
+  <HEL3.label>設計図を調べる (建築 12)</HEL3.label>
+  <HEL3.description>建築家に、入手できる道具でHELが作れる設計を固めさせよう</HEL3.description>
 
-  <HEL4.StepLabel>HELのプロトタイプを作る</HEL4.StepLabel>
-  <HEL4.StepDesc>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</HEL4.StepDesc>
+  <HEL4.label>HELのプロトタイプを作る</HEL4.label>
+  <HEL4.description>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</HEL4.description>
 
-  <HEL5.StepLabel>データを集める</HEL5.StepLabel>
-  <HEL5.StepDesc>データを集めるために飛んでいる砲弾を迎撃しよう。武器管制システムから自分で発射した砲弾も撃ち落とせるように設定できる</HEL5.StepDesc>
+  <HEL5.label>データを集める</HEL5.label>
+  <HEL5.description>データを集めるために飛んでいる砲弾を迎撃しよう。武器管制システムから自分で発射した砲弾も撃ち落とせるように設定できる</HEL5.description>
 
 
   <!-- /////////////////////////////////////////////////////// -->
 
-  <Railgun1.StepLabel>レールガンを研究する (知力 12)</Railgun1.StepLabel>
-  <Railgun1.StepDesc>レールガンを作るためには、まず研究員にそのデザインと仕組みを調べさせよう</Railgun1.StepDesc>
+  <Railgun1.label>レールガンを研究する (知力 12)</Railgun1.label>
+  <Railgun1.description>レールガンを作るためには、まず研究員にそのデザインと仕組みを調べさせよう</Railgun1.description>
 
-  <Railgun2.StepLabel>部品を評価する (工芸 15)</Railgun2.StepLabel>
-  <Railgun2.StepDesc>工芸家に、入手できる資源からレールガンに必要な部品を作るための設計をさせよう</Railgun2.StepDesc>
+  <Railgun2.label>部品を評価する (工芸 15)</Railgun2.label>
+  <Railgun2.description>工芸家に、入手できる資源からレールガンに必要な部品を作るための設計をさせよう</Railgun2.description>
 
-  <Railgun3.StepLabel>設計図を調べる (建築 15)</Railgun3.StepLabel>
-  <Railgun3.StepDesc>建築家に、入手できる道具でレールガンが作れる設計を固めさせよう</Railgun3.StepDesc>
+  <Railgun3.label>設計図を調べる (建築 15)</Railgun3.label>
+  <Railgun3.description>建築家に、入手できる道具でレールガンが作れる設計を固めさせよう</Railgun3.description>
 
-  <Railgun4.StepLabel>レールガンのプロトタイプを作る</Railgun4.StepLabel>
-  <Railgun4.StepDesc>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</Railgun4.StepDesc>
+  <Railgun4.label>レールガンのプロトタイプを作る</Railgun4.label>
+  <Railgun4.description>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</Railgun4.description>
 
-  <Railgun5.StepLabel>データを集める</Railgun5.StepLabel>
-  <Railgun5.StepDesc>データを集めるために生物に向けて試射しよう</Railgun5.StepDesc>
+  <Railgun5.label>データを集める</Railgun5.label>
+  <Railgun5.description>データを集めるために生物に向けて試射しよう</Railgun5.description>
 
-  <Obelisk1.StepLabel>オベリスクを研究する (知力 15)</Obelisk1.StepLabel>
-  <Obelisk1.StepDesc>オベリスクを作るためには、まず研究員にそのデザインと仕組みを調べさせよう</Obelisk1.StepDesc>
+  <Obelisk1.label>オベリスクを研究する (知力 15)</Obelisk1.label>
+  <Obelisk1.description>オベリスクを作るためには、まず研究員にそのデザインと仕組みを調べさせよう</Obelisk1.description>
 
-  <Obelisk2.StepLabel>部品を評価する (工芸 18)</Obelisk2.StepLabel>
-  <Obelisk2.StepDesc>工芸家に、入手できる資源からオベリスクに必要な部品を作るための設計をさせよう</Obelisk2.StepDesc>
+  <Obelisk2.label>部品を評価する (工芸 18)</Obelisk2.label>
+  <Obelisk2.description>工芸家に、入手できる資源からオベリスクに必要な部品を作るための設計をさせよう</Obelisk2.description>
 
-  <Obelisk3.StepLabel>設計図を調べる (建築 18)</Obelisk3.StepLabel>
-  <Obelisk3.StepDesc>建築家に、入手できる道具でオベリスクが作れる設計を固めさせよう</Obelisk3.StepDesc>
+  <Obelisk3.label>設計図を調べる (建築 18)</Obelisk3.label>
+  <Obelisk3.description>建築家に、入手できる道具でオベリスクが作れる設計を固めさせよう</Obelisk3.description>
 
-  <Obelisk4.StepLabel>オベリスクのプロトタイプを作る</Obelisk4.StepLabel>
-  <Obelisk4.StepDesc>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</Obelisk4.StepDesc>
+  <Obelisk4.label>オベリスクのプロトタイプを作る</Obelisk4.label>
+  <Obelisk4.description>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</Obelisk4.description>
 
-  <Obelisk5.StepLabel>データを集める</Obelisk5.StepLabel>
-  <Obelisk5.StepDesc>データを集めるために生物に向けて試射しよう</Obelisk5.StepDesc>
+  <Obelisk5.label>データを集める</Obelisk5.label>
+  <Obelisk5.description>データを集めるために生物に向けて試射しよう</Obelisk5.description>
 
-  <Marauder1.StepLabel>電磁プラズマ砲を研究する (知力 12)</Marauder1.StepLabel>
-  <Marauder1.StepDesc>電磁プラズマ砲を作るためには、まず研究員にそのデザインと仕組みを調べさせよう</Marauder1.StepDesc>
+  <Marauder1.label>電磁プラズマ砲を研究する (知力 12)</Marauder1.label>
+  <Marauder1.description>電磁プラズマ砲を作るためには、まず研究員にそのデザインと仕組みを調べさせよう</Marauder1.description>
 
-  <Marauder2.StepLabel>部品を評価する (工芸 15)</Marauder2.StepLabel>
-  <Marauder2.StepDesc>工芸家に、入手できる資源から電磁プラズマ砲に必要な部品を作るための設計をさせよう</Marauder2.StepDesc>
+  <Marauder2.label>部品を評価する (工芸 15)</Marauder2.label>
+  <Marauder2.description>工芸家に、入手できる資源から電磁プラズマ砲に必要な部品を作るための設計をさせよう</Marauder2.description>
 
-  <Marauder3.StepLabel>設計図を調べる (建築 15)</Marauder3.StepLabel>
-  <Marauder3.StepDesc>建築家に、入手できる道具で電磁プラズマ砲が作れる設計を固めさせよう</Marauder3.StepDesc>
+  <Marauder3.label>設計図を調べる (建築 15)</Marauder3.label>
+  <Marauder3.description>建築家に、入手できる道具で電磁プラズマ砲が作れる設計を固めさせよう</Marauder3.description>
 
-  <Marauder4.StepLabel>電磁プラズマ砲のプロトタイプを作る</Marauder4.StepLabel>
-  <Marauder4.StepDesc>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</Marauder4.StepDesc>
+  <Marauder4.label>電磁プラズマ砲のプロトタイプを作る</Marauder4.label>
+  <Marauder4.description>充電されたPPC電池と武器管制システムのある電力ネットワークに繋げたプロトタイプを作ろう。プロトタイプは誤動作が起こりやすいので、ご注意ください</Marauder4.description>
 
-  <Marauder5.StepLabel>データを集める</Marauder5.StepLabel>
-  <Marauder5.StepDesc>データを集めるために生物に向けて試射しよう</Marauder5.StepDesc>
+  <Marauder5.label>データを集める</Marauder5.label>
+  <Marauder5.description>データを集めるために生物に向けて試射しよう</Marauder5.description>
 
 </LanguageData>
